--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Andrew B. Nimely for Madison Township Trustee",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "../src/images/c2.JPG",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "../src/images/c2.JPG",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "../src/images/c2.JPG",
       "type": "image/png",
       "sizes": "512x512"
     }
